--- a/main.css
+++ b/main.css
@@ -280,9 +280,9 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: 20px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -300,7 +300,7 @@ nav {
 }
 
 #Research .content-div .cont-item {
-  margin: 10px;
+  margin: 50px;
   width: 200px;
   height: 250px;
   border-radius: 9px;
